--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 ipykernel==6.29.5
-ipython==9.0.2
+ipython>=8.0.0,<9.0.0
 ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 jedi==0.19.2
